--- a/HighSchoolHeroes/HighSchoolHeroes/Base.lproj/Main.storyboard
+++ b/HighSchoolHeroes/HighSchoolHeroes/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="k4l-Iq-2SH" kind="relationship" relationship="viewControllers" id="G8n-sV-apV"/>
+                        <segue destination="Wab-6X-l38" kind="relationship" relationship="viewControllers" id="Qdf-2I-POm"/>
                         <segue destination="PdW-oA-sLl" kind="relationship" relationship="viewControllers" id="KKC-BT-Pk7"/>
                         <segue destination="act-n6-JX7" kind="relationship" relationship="viewControllers" id="vqV-8I-rZA"/>
                     </connections>
@@ -384,6 +384,70 @@
             </objects>
             <point key="canvasLocation" x="-445" y="321"/>
         </scene>
+        <!--My Schools View Controller - My Teams-->
+        <scene sceneID="BU9-OS-ekr">
+            <objects>
+                <viewController id="tYv-qm-gc2" customClass="MySchoolsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Um9-BP-B90"/>
+                        <viewControllerLayoutGuide type="bottom" id="HeB-I5-ofY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Rkl-OB-6cU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="upM-r4-QyG">
+                                <rect key="frame" x="120" y="478" width="80" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add Team">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="trE-mh-g4c" kind="push" id="x9K-Tx-CBC"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wHs-IM-xsD">
+                                <rect key="frame" x="-5" y="66" width="325" height="404"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="schoolCell" id="kCq-wo-l2N" customClass="SchoolCell">
+                                        <rect key="frame" x="0.0" y="22" width="325" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kCq-wo-l2N" id="I89-Wf-BhF">
+                                            <rect key="frame" x="0.0" y="0.0" width="325" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lafayette County High School" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfC-a4-LyT">
+                                                    <rect key="frame" x="20" y="11" width="305" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="kfC-a4-LyT" id="mvI-MF-75D"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="tYv-qm-gc2" id="k7I-Mn-g7u"/>
+                                    <outlet property="delegate" destination="tYv-qm-gc2" id="Sod-LL-XXh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="My Teams" id="4zH-iy-X0i"/>
+                    <connections>
+                        <outlet property="schoolsTableView" destination="wHs-IM-xsD" id="4J9-Ab-C4R"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wMP-qz-x1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1677" y="-453"/>
+        </scene>
         <!--State View Controller - State-->
         <scene sceneID="Khy-Y8-6U3">
             <objects>
@@ -433,7 +497,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nXR-Kz-Mmi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1582" y="-397"/>
+            <point key="canvasLocation" x="2196" y="-453"/>
         </scene>
         <!--City View Controller - City-->
         <scene sceneID="YzX-uK-dRE">
@@ -490,7 +554,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KJs-jD-CGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2092" y="-397"/>
+            <point key="canvasLocation" x="2760" y="-453"/>
         </scene>
         <!--School View Controller - School-->
         <scene sceneID="ZO9-eX-N1g">
@@ -554,7 +618,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Raf-WR-UDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2602" y="-397"/>
+            <point key="canvasLocation" x="3266" y="-453"/>
         </scene>
         <!--Navigation Controller - Roster-->
         <scene sceneID="H3u-f2-AZi">
@@ -577,27 +641,6 @@
             </objects>
             <point key="canvasLocation" x="1105" y="1191"/>
         </scene>
-        <!--Navigation Controller - My Teams-->
-        <scene sceneID="MxV-NW-7Rb">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k4l-Iq-2SH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My Teams" id="kgl-SD-1Lm">
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-15"/>
-                    </tabBarItem>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lFc-us-1uj">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="trE-mh-g4c" kind="relationship" relationship="rootViewController" id="gnf-mR-lMo"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OwM-Ps-lnC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1099" y="-397"/>
-        </scene>
         <!--Navigation Controller - Schedule-->
         <scene sceneID="YC2-0t-bac">
             <objects>
@@ -618,6 +661,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K7m-du-rWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1345" y="377"/>
+        </scene>
+        <!--Navigation Controller - My Teams-->
+        <scene sceneID="EDj-2Z-A4a">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wab-6X-l38" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="My Teams" id="HVc-7y-R34">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-15"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mwa-Ty-phg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tYv-qm-gc2" kind="relationship" relationship="rootViewController" id="hZ0-qt-weE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bgB-Ss-sLy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1127" y="-453"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
